@@ -27,6 +27,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #22435: Fix a file descriptor leak when SocketServer bind fails.
+
 - Issue #13096: Fixed segfault in CTypes POINTER handling of large
   values.
 
